--- a/settingTheCase-Basic.ipynb
+++ b/settingTheCase-Basic.ipynb
@@ -12,11 +12,11 @@
    "metadata": {},
    "source": [
     "Using the $k-\\epsilon$ model one need to specify the inlet value for such quantites. Given the $Re$\n",
-    "$$\\begin{align*}\n",
+    "\\begin{align*}\n",
     "k = \\frac{1}{2}{\\bf{U^{\\prime}} \\cdot U^{\\prime}}\n",
     "\\\\\n",
     "\\epsilon = C_{\\mu}^{0.75}k^{3/2}/l_t\n",
-    "\\end{align*}$$\n",
+    "\\end{align*}\n",
     "and\n",
     "\\begin{equation*}\n",
     "\\nu_t = C_{\\mu} \\frac{k^2}{\\epsilon}\n",
