Added properties calculation using Thermo package

--- a/settingTheCase-Basic.ipynb
+++ b/settingTheCase-Basic.ipynb
@@ -161,38 +161,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Get the density and other transport properties"
+    "# Get the density and other transport properties"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dh Calculated 0.0015999999999999999 [m]\n",
-      "Dh Manual 0.004 [m]\n",
-      "mf 0.04 [kg/s]\n",
-      "fluid: Water\n",
-      "rho from Thermo package 998.2386619948825 [kg/m^3]\n",
-      "rho 998.2379970668911 [kg/m^3]\n",
-      "mu 1.005e-03 [Pa-s] or [Kg/m/s]\n",
-      "nu 1.007e-06 [m^2/s]\n",
-      "Pr (Cp mu/K) 7.037e+00\n",
-      "satT at P[Pa] = 101325.0 is 373.124 [K]\n",
-      "satP at T[K] = 293 is 2317.670 [Pa]\n",
-      "satRhoVap 0.017 [kg/m3]\n",
-      "muVap 9.539e-06 [Pa-s] or [Kg/m/s]\n",
-      "nuVap 5.558e-04 [m^2/s]\n",
-      "Ux 10.017651130675112 [m/s]\n",
-      "Ux Manual Input 16 [m/s]\n",
-      "Re (based on Dh) = 63551.22093297681\n",
-      "Re (based on Width) = 15887.805233244202\n",
-      "Re (based on Height) = 63551.22093297681\n",
-      "lambda_T 5.017623169187479e-05 [m]\n"
+      "Reference Fluid: isoOctance\n",
+      "Reference Temperature [K] 363\n",
+      "Reference Pressure [Pa] 600000.0\n",
+      "\n",
+      " \n",
+      "Properties using Thermo package\n",
+      "fluid: isoOctane\n",
+      "rho 634.3721177939541 [kg/m^3]\n",
+      "Cp 2387.019259377028 k 0.08221658286752367 mu 0.00025351112239747854 nu 3.99625259822374e-07\n",
+      "SurfaceTension 0.012666032395930704\n",
+      "pSat 77168.04073477257\n",
+      "TSat 450.13103758070014\n",
+      "rhoVapor 3.053091533841822\n",
+      "End of Thermo results\n",
+      "\n",
+      " \n",
+      "Properties using CoolProp package\n",
+      "fluid: nOctane\n",
+      "rho 645.1613159924336 [kg/m^3]\n",
+      "mu 2.700e-04 [Pa-s] or [Kg/m/s]\n",
+      "nu 4.186e-07 [m^2/s]\n",
+      "Pr (Cp mu/K) 6.311e+00\n",
+      "SurfaceTension 0.015113759968265982\n",
+      "Liquid-Vapor saturation properties\n",
+      "satT at P[Pa] = 600000.0 is 477.615 [K]\n",
+      "satP at T[K] = 363 is 33243.040 [Pa]\n",
+      "satRhoVap 1.291 [kg/m3]\n",
+      "muVap 6.895e-06 [Pa-s] or [Kg/m/s]\n",
+      "nuVap 5.341e-06 [m^2/s]\n",
+      "End of CoolProp results \n",
+      "\n",
+      "Using properties calculated with Thermo package\n"
      ]
     }
    ],
@@ -200,110 +212,169 @@
     "import numpy as np\n",
     "from thermo.chemical import Chemical\n",
     "from CoolProp.CoolProp import PropsSI\n",
+    "import matplotlib\n",
     "\n",
     "## Input data\n",
-    "H = 4e-3 #\n",
-    "Din = 1e-3\n",
-    "A = Din*H\n",
-    "P = 2*(Din+H)\n",
-    "Dh = 4*A/P\n",
-    "print(\"Dh Calculated\", Dh , \"[m]\")\n",
-    "# Dh manual entry\n",
-    "Dh = H\n",
-    "print(\"Dh Manual\", Dh , \"[m]\")\n",
-    "\n",
-    "## Mass flow rate\n",
-    "mf = 2.4/60\n",
-    "print(\"mf\", mf, \"[kg/s]\")\n",
+    "## Reference caluculation for ECN-Spray G \n",
+    "## https://ecn.sandia.gov/gasoline-spray-combustion/target-condition/spray-g-operating-condition/\n",
     "\n",
     "## Get the fluid properties\n",
-    "fluidName = \"Water\"\n",
-    "T_fluid = 293  # temperature\n",
-    "P_fluid = 1.01325e5  # pressure\n",
+    "referenceFluid = \"isoOctance\"\n",
+    "## Some fluids are not available in both packages\n",
+    "fluidNameCoolProp = \"nOctane\"\n",
+    "fluidNameThermo = \"isoOctane\"\n",
+    "T_fluid = 363  # temperature\n",
+    "P_fluid = 6e5  # pressure\n",
+    "print(\"Reference Fluid:\", referenceFluid)\n",
+    "print(\"Reference Temperature [K]\", T_fluid)\n",
+    "print(\"Reference Pressure [Pa]\", P_fluid)\n",
     "\n",
-    "fluid = Chemical(fluidName)\n",
+    "\n",
+    "## Get properties using Thermo\n",
+    "print(\"\\n \")\n",
+    "print(\"Properties using Thermo package\")\n",
+    "fluid = Chemical(fluidNameThermo)\n",
     "fluid.calculate(T=T_fluid, P=P_fluid)\n",
-    "print(\"fluid:\", fluidName)\n",
-    "rho = fluid.rho\n",
-    "print(\"rho from Thermo package\", rho , \"[kg/m^3]\")\n",
-    "# get density from CoolProp\n",
-    "rho = PropsSI('D','T',T_fluid,'P',P_fluid,fluidName)\n",
+    "print(\"fluid:\", fluidNameThermo)\n",
+    "print(\"rho\", fluid.rho , \"[kg/m^3]\")\n",
+    "rhoThermo = fluid.rho\n",
+    "muThermo = fluid.mu\n",
+    "print(\"Cp\", fluid.Cp, \"k\", fluid.k, \"mu\", fluid.mu, \"nu\", fluid.nu)\n",
+    "#fluid.SurfaceTension.plot_T_dependent_property()\n",
+    "print(\"SurfaceTension\", fluid.SurfaceTension(T_fluid))\n",
+    "print(\"pSat\", fluid.Psat)\n",
+    "print(\"TSat\", fluid.Tsat(P_fluid))\n",
+    "# Set fluid prop for \n",
+    "fluid.calculate(T=T_fluid,P=fluid.Psat)\n",
+    "print(\"rhoVapor\", fluid.rho)\n",
+    "print(\"End of Thermo results\")\n",
+    "\n",
+    "## Get properties using CoolProp\n",
+    "print(\"\\n \")\n",
+    "print(\"Properties using CoolProp package\")\n",
+    "print(\"fluid:\", fluidNameCoolProp)\n",
+    "rho = PropsSI('D','T',T_fluid,'P',P_fluid,fluidNameCoolProp)\n",
     "print(\"rho\", rho , \"[kg/m^3]\")\n",
-    "mu = PropsSI('V','T',T_fluid,'P',P_fluid,fluidName)\n",
+    "mu = PropsSI('V','T',T_fluid,'P',P_fluid,fluidNameCoolProp)\n",
     "print(\"mu\", \"{:.3e}\".format(mu), \"[Pa-s] or [Kg/m/s]\")\n",
     "nu = mu/rho\n",
     "print(\"nu\", \"{:.3e}\".format(nu), \"[m^2/s]\")\n",
-    "Pr = PropsSI('Prandtl','T',T_fluid,'P',P_fluid,fluidName)\n",
+    "Pr = PropsSI('Prandtl','T',T_fluid,'P',P_fluid,fluidNameCoolProp)\n",
     "print(\"Pr (Cp mu/K)\", \"{:.3e}\".format(Pr))\n",
+    "print(\"SurfaceTension\", PropsSI('I','T',T_fluid,'P',P_fluid,fluidNameCoolProp))\n",
     "\n",
     "\n",
     "#Saturation properties\n",
+    "print(\"Liquid-Vapor saturation properties\")\n",
     "#Saturation temperature of fluid at P_fluid pressure\n",
-    "satT = PropsSI('T','P',P_fluid,'Q',0,fluidName)\n",
+    "satT = PropsSI('T','P',P_fluid,'Q',0,fluidNameCoolProp)\n",
     "print(\"satT at P[Pa] =\",P_fluid, \"is\" , \"{:.3f}\".format(satT), \"[K]\")\n",
     "\n",
     "#Saturation pressure of fluid at T_fluid temperature\n",
-    "satP = PropsSI('P','T',T_fluid,'Q',0,fluidName)\n",
+    "satP = PropsSI('P','T',T_fluid,'Q',0,fluidNameCoolProp)\n",
     "print(\"satP at T[K] =\",T_fluid, \"is\" ,\"{:.3f}\".format(satP), \"[Pa]\")\n",
     "\n",
     "#Saturated vapor density of fluid at T_fluid\n",
-    "satRhoVap = PropsSI('D','T',T_fluid,'Q',1,fluidName)\n",
+    "satRhoVap = PropsSI('D','T',T_fluid,'Q',1,fluidNameCoolProp)\n",
     "print(\"satRhoVap\", \"{:.3f}\".format(satRhoVap), \"[kg/m3]\")\n",
     "\n",
     "#Sat vapor viscosity at given temperature\n",
-    "muVap = PropsSI('V','T',T_fluid,'Q',1,fluidName)\n",
+    "muVap = PropsSI('V','T',T_fluid,'Q',1,fluidNameCoolProp)\n",
     "print(\"muVap\", \"{:.3e}\".format(muVap), \"[Pa-s] or [Kg/m/s]\")\n",
     "nuVap = muVap/satRhoVap\n",
     "print(\"nuVap\", \"{:.3e}\".format(nuVap), \"[m^2/s]\")\n",
+    "print(\"End of CoolProp results \\n\")\n",
     "\n",
-    "Ux = mf/(A*rho) # also need the actual reduced area\n",
-    "print(\"Ux\", Ux, \"[m/s]\")\n",
-    "Ux = 16\n",
-    "print(\"Ux Manual Input\", Ux, \"[m/s]\")\n",
-    "Re = rho*Ux*Dh/mu\n",
-    "print(\"Re (based on Dh) =\", Re)\n",
     "\n",
-    "Re = rho*Ux*Din/mu\n",
-    "print(\"Re (based on Width) =\", Re)\n",
-    "\n",
-    "#rho = 1000\n",
-    "#mu = 1e-5\n",
-    "Re = rho*Ux*H/mu\n",
-    "print(\"Re (based on Height) =\", Re)\n",
-    "\n",
-    "Dh = H\n",
-    "# Taylor based length scale\n",
-    "lambda_T = Dh*(10**0.5)*Re**(-0.5)\n",
-    "print(\"lambda_T\", lambda_T,  \"[m]\")"
+    "usePackage = \"Thermo\" #CoolProp\n",
+    "if usePackage != \"Thermo\":\n",
+    "    print(\"Using CoolProp\")\n",
+    "if usePackage == \"Thermo\":\n",
+    "    print(\"Using properties calculated with Thermo package\")\n",
+    "    rho = rhoThermo\n",
+    "    mu = muThermo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Flow Characterization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Re 63551.22093297681\n",
-      "f = 0.019927623081078805\n",
-      "Cf = 0.006350431179146555\n",
-      "tau_w 636.5603376243218\n",
-      "tau_w_Cf 811.4229377001463\n",
-      "uTau 0.901584821816982\n",
-      "uStar 0.7985511496419762\n",
-      "viscous sub layer thickness = 6.30555532460374e-06\n",
-      "viscous sub layer thickness Cf = 5.584952554376019e-06\n",
-      "lv 0.00031349931274718385\n",
-      "yPlus =  1.0 requires first cell height [m] 1.261e-06\n",
-      "yPlus =  1.0 requires first cell height [m] with Cf  1.117e-06\n"
+      "Flow Charaterization\n",
+      "Type is 'pipe', and Dh is 0.000165 [m]\n",
+      "Hydraulic Diameter=0.000165\n",
+      "mf 0.00175 [kg/s]\n",
+      "X-sectional Area 2.138246499849553e-08\n",
+      "Re (based on Dh) = 53268.09983635048\n",
+      "lambda_T 2.260738559131141e-06 [m]\n",
+      "f = 0.020826662226801542\n",
+      "Cf = 0.0065786162362349\n",
+      "tau_w 27488.190880003363\n",
+      "tau_w_Cf 34731.29911238512\n",
+      "uTau 7.399263114481789\n",
+      "uStar 6.582654115452835\n",
+      "viscous sub layer thickness = 3.179230191051949e-07\n",
+      "viscous sub layer thickness Cf = 2.828359037556093e-07\n",
+      "lv 0.0003658568576761316\n",
+      "yPlus =  1.0 requires first cell height [m] 6.071e-08\n",
+      "yPlus =  1.0 requires first cell height [m] with Cf  5.401e-08\n"
      ]
     }
    ],
    "source": [
-    "## print Re\n",
-    "print(\"Re\",Re)\n",
+    "print(\"Flow Charaterization\")\n",
+    "\n",
+    "class calculateDh:\n",
+    "    \"\"\"Class to calculate Hydraulic Diameter and Re. Default is Dh=D for pipe.\n",
+    "       Examples:\n",
+    "            geomPipe = calculateDh(diameter=1e-3); print(geomPipe)\n",
+    "            geomDuct = calculateDh(); geomDuct.DhDuct(1,2); print(geomDuct)\n",
+    "    \"\"\"\n",
+    "    def __init__(self, diameter=1):\n",
+    "        self.Dh = diameter\n",
+    "        self.name = \"pipe\"\n",
+    "        self.Area = (np.pi/4)*diameter**2\n",
+    "    def DhDuct(self, height, width):\n",
+    "        Dh = 4*(height*width)/(2*(height+width)) #4A/P\n",
+    "        self.Dh = Dh\n",
+    "        self.name = \"duct\"\n",
+    "        self.Area = height*width\n",
+    "    def Re(self, rho, mu, U):\n",
+    "        return rho*U*self.Dh/mu\n",
+    "    def __str__(self):\n",
+    "        output = 'Type is ' + repr(self.name) + ', and Dh is ' + repr(self.Dh) + ' [m]'\n",
+    "        return output\n",
+    "\n",
+    "\n",
+    "geomPipe = calculateDh(diameter=0.165e-3); print(geomPipe)\n",
+    "Dh = geomPipe.Dh\n",
+    "print(\"Hydraulic Diameter=%g\" %Dh)\n",
+    "\n",
+    "## Mass flow rate from experiment for six nozzles\n",
+    "mf = 0.014/8 #For one nozzle, total 8 \n",
+    "print(\"mf\", mf, \"[kg/s]\")\n",
+    "print(\"X-sectional Area\", geomPipe.Area)\n",
+    "## Approx max velocity in the pipe\n",
+    "Ux = mf/(geomPipe.Area*rho)\n",
+    "Re = geomPipe.Re(rho,mu,Ux)\n",
+    "print(\"Re (based on Dh) =\", Re)\n",
+    "\n",
+    "\n",
+    "# Taylor based length scale\n",
+    "lambda_T = Dh*(10**0.5)*Re**(-0.5)\n",
+    "print(\"lambda_T\", lambda_T,  \"[m]\")\n",
+    "\n",
     "\n",
     "## Friction Factor\n",
     "f = 0.3164/Re**0.25\n",
@@ -338,34 +409,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Turbulence Modeling"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Din 0.001\n",
-      "mixingLength 5e-05\n",
-      "UxPrime 0.8\n",
-      "k 0.32000000000000006 [m^2/s^2]\n",
-      "epsilon 5.948902e+02 [m^2/s^3]\n",
-      "nut 1.549193338482967e-05 [m^2/s]\n",
-      "omega 2.065591e+04 [1/s]\n",
-      "omega_wall 6.576729e+06\n",
-      "DeltaT 2.3437500000000003e-07\n",
-      "DeltaT_CoAc 3.535533905932738e-09\n",
-      "Prandtl Number  7.036891065061594\n",
-      "Turbulent Prandtl Number Prt  0.3348422549635111\n",
-      "mut =  0.015464636552766073 [Pa-s] or [Kg/m/s]\n",
-      "alphat (mut/Prt), Prt = 0.3348422549635111 gives 4.618484e-02 [Pa-s] or [Kg/m/s]\n",
-      "alphat based on Prt=0.7 is 2.209234e-02 [Pa-s] or [Kg/m/s]\n"
+      "Din 0.000165\n",
+      "mixingLength 8.25e-06\n",
+      "UxPrime 6.450690374953247\n",
+      "k 20.805703156757232 [m^2/s^2]\n",
+      "epsilon 1.890173e+06 [m^2/s^3]\n",
+      "nut 2.061131852483088e-05 [m^2/s]\n",
+      "omega 1.009431e+06 [1/s]\n",
+      "omega_wall 2.733423e+06\n",
+      "DeltaT 1.5502216691143662e-08\n",
+      "DeltaT_CoAc 5.65685424949238e-09\n",
+      "Prandtl Number  6.310712581375123\n",
+      "Turbulent Prandtl Number Prt  0.35538593985061406\n",
+      "mut =  0.013075245783122724 [Pa-s] or [Kg/m/s]\n",
+      "alphat (mut/Prt), Prt = 0.35538593985061406 gives 3.679168e-02 [Pa-s] or [Kg/m/s]\n",
+      "alphat based on Prt=0.7 is 1.867892e-02 [Pa-s] or [Kg/m/s]\n"
      ]
     }
    ],
    "source": [
     "lt_scale = 5 # turbulent lenght scale\n",
+    "Din = Dh\n",
     "print(\"Din\", Din)\n",
     "lt = Din*lt_scale/100\n",
     "print(\"mixingLength\", lt)\n",
@@ -387,10 +466,11 @@
     "\n",
     "\n",
     "\n",
-    "Co = 0.75\n",
-    "nyCells = 10\n",
-    "DeltaX = Din/10\n",
-    "DeltaX = 5e-6\n",
+    "Co = 0.25\n",
+    "# Approximate cells\n",
+    "nxCells = 35\n",
+    "DeltaX = Din/nxCells\n",
+    "DeltaX = 8e-6\n",
     "DeltaT = Co*DeltaX/Ux\n",
     "print(\"DeltaT\", DeltaT)\n",
     "psi_l = 5e-7\n",
@@ -412,43 +492,6 @@
     "alphat = mut/0.7\n",
     "print(\"alphat based on Prt=0.7 is\", '{0:e}'.format(alphat), \"[Pa-s] or [Kg/m/s]\")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Setting the expansion Ratio of cells in blockMesh"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$R$ is the final to first cell size ratio. \n",
-    "$r$ is the first to second expansion ratio.\n",
-    "$n$ is the number of cells\n",
-    "$\\delta x_s$ is the smallest cell size\n",
-    "$l$ is the total length. Then\n",
-    "$$r = R^{\\frac{1}{n-1}}$$\n",
-    "$$\\delta x_s = l \\frac{r-1}{\\alpha r - 1}$$\n",
-    "and\n",
-    "$$ \\alpha = R \\ for \\ R>1$$\n",
-    "\n",
-    "\\begin{equation*}\n",
-    "\t\\alpha = 1-r^{-n} + r^{-1} \\ for \\ R<1\n",
-    "\\end{equation*}\n",
-    "\n",
-    "$$ r = \\frac{l - \\delta x_s}{l - \\delta x_s R}$$\n",
-    "$$n = \\frac{\\ln R}{\\ln r}+1$$\n",
-    "\n",
-    "Setting the double expansion ration given as\n",
-    "\n",
-    "(0.05 0.11 10)    // 20% x-dir, 30% cells, expansion = 4 \n",
-    "\n",
-    "(0.9 0.78 1)    // 60% x-dir, 40% cells, expansion = 1 \n",
-    "\n",
-    "(0.05 0.11 0.1) // 20% x-dir, 30% cells, expansion = 0.25 (1/4) "
-   ]
   }
  ],
  "metadata": {
@@ -467,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
