--- a/blockMeshGrading.ipynb
+++ b/blockMeshGrading.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R [4.96]\n",
+      "R [4.961311]\n",
       "x 0.357\n",
       "x 0.4\n"
      ]
@@ -105,25 +105,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L 0.0160 Ls 0.0016 Lc 0.0128 Le 0.0016\n",
-      "Ns = start cells: 32 ; rs = start expansion ratio: 1.053 ; Rs: 5.000\n",
-      "Nc = centre cells: 128 ; rc = centre expansion ratio: 1.000 ; Rs: 1.000\n",
-      "Ne = end cells: 32 ; re = end expansion ratio: 0.949 ; Re: 0.200\n",
-      "Nt = Total Cells: 192\n",
-      "Cell Ratio (Start Centre End ) = ( 0.167, 0.667, 0.167 )\n",
-      "Length Ratio (Left Center Right ) = ( 0.100, 0.800, 0.100 )\n",
+      "L 0.0240 Ls 0.0120 Lc 0.0096 Le 0.0024\n",
+      "Ns = start cells: 31 ; rs = start expansion ratio: 0.983 ; Rs: 0.600\n",
+      "Nc = centre cells: 69 ; rc = centre expansion ratio: 0.974 ; Rs: 0.167\n",
+      "Ne = end cells: 58 ; re = end expansion ratio: 0.994 ; Re: 0.700\n",
+      "Nt = Total Cells: 158\n",
+      "Cell Ratio (Start Centre End ) = ( 0.196, 0.437, 0.367 )\n",
+      "Length Ratio (Left Center Right ) = ( 0.500, 0.400, 0.100 )\n",
       "Final grading for cell edge\n",
       "(\n",
-      "  ( 0.100   0.167   5.000 ) \n",
-      "  ( 0.800   0.667   1.000 ) \n",
-      "  ( 0.100   0.167   0.200 ) \n",
+      "  ( 0.500   0.196   0.600 ) \n",
+      "  ( 0.400   0.437   0.167 ) \n",
+      "  ( 0.100   0.367   0.700 ) \n",
       " )\n"
      ]
     }
@@ -134,18 +134,95 @@
     "# cell size:           x1    x2        x3   x4\n",
     "# cell total length    |<--------L--------->|\n",
     "# start,centre, end L  | Ls  |  Lc     | Le |  \n",
-    "x1 = 2e-5\n",
-    "x2 = 1e-4\n",
-    "x3 = 1e-4\n",
-    "x4 = 2e-5\n",
+    "x1 = 50e-5\n",
+    "x2 = 30e-5\n",
+    "x3 = 5e-5\n",
+    "x4 = 3.5e-5\n",
     "\n",
     "# lenght of cell\n",
-    "L = 16e-3\n",
+    "L = 24e-3\n",
     "\n",
     "# start section length\n",
-    "Ls = L*10/100\n",
+    "Ls = L*50/100\n",
     "# end section length\n",
     "Le = L*10/100\n",
+    "# centre section length\n",
+    "Lc = L-Ls-Le\n",
+    "\n",
+    "print(\"L\", '{0:.4f}'.format(L), \"Ls\", '{0:.4f}'.format(Ls), \"Lc\", '{0:.4f}'.format(Lc), \"Le\", '{0:.4f}'.format(Le))\n",
+    "\n",
+    "# find cell count and expansion ratio for Ls\n",
+    "Ns, Rs, rs = getNumberOfCellsAndExpansionRatio(Ls,x1,x2)\n",
+    "print (\"Ns = start cells:\", '{0:.0f}'.format(Ns), \";\", \"rs = start expansion ratio:\", '{0:.3f}'.format(rs), \";\", \"Rs:\", '{0:.3f}'.format(Rs))\n",
+    "\n",
+    "# find cell count and expansion ratio for Lc\n",
+    "Nc, Rc, rc = getNumberOfCellsAndExpansionRatio(Lc,x2,x3)\n",
+    "print (\"Nc = centre cells:\", '{0:.0f}'.format(Nc), \";\", \"rc = centre expansion ratio:\", '{0:.3f}'.format(rc), \";\", \"Rs:\", '{0:.3f}'.format(Rc))\n",
+    "\n",
+    "# find cell count and expansion ratio for Le\n",
+    "Ne, Re, re = getNumberOfCellsAndExpansionRatio(Le,x3,x4)\n",
+    "print (\"Ne = end cells:\", '{0:.0f}'.format(Ne), \";\", \"re = end expansion ratio:\", '{0:.3f}'.format(re), \";\", \"Re:\", '{0:.3f}'.format(Re))\n",
+    "\n",
+    "# total cells\n",
+    "Nt = Ns + Nc + Ne # for full edge\n",
+    "print (\"Nt = Total Cells:\", setFormat(Nt, formatIn=\".0f\"))\n",
+    "\n",
+    "cellRatioStartCenterEnd = [setFormat(Ns/Nt), setFormat(Nc/Nt), setFormat(Ne/Nt)]\n",
+    "print (\"Cell Ratio (Start Centre End ) =\", \"(\",', '.join(map(str, cellRatioStartCenterEnd)) , \")\")\n",
+    "\n",
+    "lengthRatioStartCenterEnd = [setFormat(Ls/L), setFormat(Lc/L), setFormat(Le/L)]\n",
+    "print (\"Length Ratio (Left Center Right ) =\", \"(\",', '.join(map(str, lengthRatioStartCenterEnd)) , \")\")\n",
+    "\n",
+    "print (\"Final grading for cell edge\")\n",
+    "\n",
+    "print ( \"(\\n\",  \" (\", setFormat(Ls/L), \" \", setFormat(Ns/Nt),  \" \",  setFormat(Rs),      \")\", \"\\n\", \\\n",
+    "              \" (\", setFormat(Lc/L), \" \", setFormat(Nc/Nt),   \" \",  setFormat(Rc),     \")\", \"\\n\", \\\n",
+    "              \" (\", setFormat(Le/L), \" \", setFormat(Ne/Nt),  \" \",   setFormat(Re),     \")\",\"\\n\",\")\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L 0.0200 Ls 0.0100 Lc 0.0050 Le 0.0050\n",
+      "Ns = start cells: 286 ; rs = start expansion ratio: 1.000 ; Rs: 1.000\n",
+      "Nc = centre cells: 46 ; rc = centre expansion ratio: 1.045 ; Rs: 7.143\n",
+      "Ne = end cells: 14 ; re = end expansion ratio: 1.056 ; Re: 2.000\n",
+      "Nt = Total Cells: 346\n",
+      "Cell Ratio (Start Centre End ) = ( 0.827, 0.133, 0.040 )\n",
+      "Length Ratio (Left Center Right ) = ( 0.500, 0.250, 0.250 )\n",
+      "Final grading for cell edge\n",
+      "(\n",
+      "  ( 0.500   0.827   1.000 ) \n",
+      "  ( 0.250   0.133   7.143 ) \n",
+      "  ( 0.250   0.040   2.000 ) \n",
+      " )\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Three different gradings, also possible to have same grading for two sections\n",
+    "#                      |-----|---------|----|\n",
+    "# cell size:           x1    x2        x3   x4\n",
+    "# cell total length    |<--------L--------->|\n",
+    "# start,centre, end L  | Ls  |  Lc     | Le |  \n",
+    "x1 = 3.5e-5\n",
+    "x2 = 3.5e-5\n",
+    "x3 = 25e-5\n",
+    "x4 = 50e-5\n",
+    "\n",
+    "# lenght of cell\n",
+    "L = 20e-3\n",
+    "\n",
+    "# start section length\n",
+    "Ls = L*50/100\n",
+    "# end section length\n",
+    "Le = L*25/100\n",
     "# centre section length\n",
     "Lc = L-Ls-Le\n",
     "\n",
@@ -212,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
